--- a/index.html
+++ b/index.html
@@ -323,14 +323,29 @@
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item connect all">
+                        <div class="nf-item communicate lead all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/graduate-engineers-connect-2016-registration-27726994186" title="Graduate Engineers Connect">
-                                    <img class="item-container" src="img/portfolio/gradengconnect.png" alt="1" />
+                                <a class="" href="https://www.eventbrite.com/e/effective-communication-workshop-tickets-28563659675" title="Effective Communication Workshop">
+                                    <img class="item-container" src="img/portfolio/effectivecomm.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Graduate Engineers Connect 2016</h5>
-                                            <p class="white">This signature event for graduate students and alumni will feature keynote remarks by alumnus Dr. Jonathan Rosenberg PhD'01, Vice President and Chief Technology Officer of the Collaboration Technology Group at Cisco. GraduateEngineers Connect seeks to strengthen the Columbia Engineering graduate community by bringing over 200 graduate-level degree alumni, students, and post-doctoral fellows together for an evening of networking and information sharing.</p>
+                                            <h5 class="lightblue">Effective Communication Workshop</h5>
+                                            <p class="white">In this session, participants will be introduced to and deepen their understanding of effective conversation. This class will inform through experiential practices, communication in being honest and direct in a way that builds relationship and maintains openness to diverse strategies for any given outcome, creating more innovative, collaborative results and give feedback that result in real change.</p>
+                                            <p class="salmon">Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item connect all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/silicon-alley-speed-networking-tickets-28290653105" title="Silicon Alley Speed Networking">
+                                    <img class="item-container" src="img/portfolio/speednetwork.png" alt="6" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">Silicon Alley Speed Networking</h5>
+                                            <p class="white">Please join us for SEAS first inaugural Silicon Alley Speed Networking.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -353,60 +368,15 @@
                             </div>
                         </div>
 
-                        <div class="nf-item tech innovate all">
+                        <div class="nf-item connect all">
                             <div class="item-box">
-                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdc41-57605f7f-0157-6c2193a2-00004d9bevents%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="Oculus Rift Open Lab">
-                                    <img class="item-container" src="img/portfolio/oculus.png" alt="4" />
+                                <a class="" href="https://www.eventbrite.com/e/pathway-to-the-professorship-tickets-28508947028" title="Pathway to Professorship">
+                                    <img class="item-container" src="img/portfolio/professorship.png" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Oculus Rift Open Lab</h5>
-                                            <p class="white">Come test out our Oculus Rift and experience virtual reality! Since its release last year, this exciting new technology has generated all kinds of ideas, debates, and experiments for future applicability and innovations. Find out what all the buzz is about and start dreaming big.</p>
+                                            <h5 class="lightblue">Pathway to Professorship</h5>
+                                            <p class="white">Dean Mary C. Boyce invites graduate SEAS students interested in pursuing careers in academia to participate in an inaugural seminar titled "Pathway to the Professorship".</p>
                                             <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item tech all">
-                            <div class="item-box">
-                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdc41-5780487e-0157-8c4935fd-000051a7events%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="R Open Lab">
-                                    <img class="item-container" src="img/portfolio/ropenlab.png" alt="4" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">R Open Lab</h5>
-                                            <p class="white">Interested in exploring real-world data using R techniques? Join us in learning the capabilities of R, an open-source statistical programming language. We'll use data analytics in a process to understand the world better by using real world data.</p>
-                                            <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item tech collaborate innovate all">
-                            <div class="item-box">
-                              <a class="" href="https://docs.google.com/a/tc.columbia.edu/forms/d/e/1FAIpQLSeSqEE0vobYIiPiRktB0ZL_eh5Xt1EUiZjrJK7Oj702qlMS7w/viewform" title="Maker Series: 3D Printing">
-                                    <img class="item-container" src="img/portfolio/makerseries.png" alt="5" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Maker Series: 3D Printing for Everyday Solutions </h5>
-                                            <p class="white">3D modeling for 3D printing might seem daunting at first, but it doesn't have to be! This workshop will introduce you to simple but useful 3D printing projects that provide easy fixes in your life; from creating a stand for your phone to replacing broken parts on your keyboard, our 3D printing expert will walk you through how to create simple 3D models as an entry point to modeling more advanced objects. Note: please bring your laptop for this session.</p>
-                                            <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item tech all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/silicon-alley-speed-networking-tickets-28290653105" title="Silicon Alley Speed Networking">
-                                    <img class="item-container" src="img/portfolio/speednetwork.png" alt="6" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Silicon Alley Speed Networking</h5>
-                                            <p class="white">Please join us for SEAS first inaugural Silicon Alley Speed Networking.</p>
-                                            <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
                                 </a>
@@ -415,12 +385,42 @@
 
                         <div class="nf-item connect communicate all">
                             <div class="item-box">
-                                <a class="" href="http://specialevents.cce.columbia.edu/graduate-student-career-fair-2016" title="Graduate Student Career Fair 2016">
-                                    <img class="item-container" src="img/portfolio/gradcareerfair.png" alt="7" />
+                              <a class="" href="https://www.eventbrite.com/e/on-linkedin-tickets-28192988989" title="LinkedIn Workshop">
+                                    <img class="item-container" src="img/portfolio/linkedinworkshop.png" alt="5" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Graduate Student Career Fair 2016</h5>
-                                            <p class="white">This fair will feature organizations from industries including media, finance, consulting, technology and more! This event offers employers a unique opportunity to promote internships and full time positions exclusively to Columbia graduate students (Masters, PhD) and PostDocs.</p>
+                                            <h5 class="lightblue">LinkedIn Workshop</h5>
+                                            <p class="white">This workshop will help you develop an effective LinkedIn profile and learn strategies for making useful connections.</p>
+                                            <p class="salmon"> Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item tech innovate all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/matlab-machine-learning-tickets-28558222412" title="MATLAB: Machine Learning Workshop">
+                                    <img class="item-container" src="img/portfolio/matlab.png" alt="6" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">MATLAB: Machine Learning Workshop</h5>
+                                            <p class="white">This MATLAB workshop is offered by the Mathworks. The workshop will focus on machine learning.</p>
+                                            <p class="salmon">Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item collaborate communicate lead all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/conflict-resolution-tickets-28565731873" title="Conflict Resolution Workshop">
+                                    <img class="item-container" src="img/portfolio/conflictresworkshop.png" alt="7" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">Conflict Resolution Workshop</h5>
+                                            <p class="white">Learn principles of constructive conflict resolution and gain skills for achieving “win-win” agreements and for managing challenging situations.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
