--- a/events.html
+++ b/events.html
@@ -224,12 +224,40 @@
 
                     <div class="nf-item communicate spacing all">
                         <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/effective-communication-workshop-tickets-28563659675">
+                                <img alt="1" src="img/portfolio/effectivecomm.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Effective Communication Workshop</h5>
+                                        <p class="salmon">Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item communicate spacing all">
+                        <div class="item-box">
                             <a href="https://www.eventbrite.com/e/grad-seas-resume-workshop-tickets-26586098737">
                                 <img alt="1" src="img/portfolio/resume.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Resume Writing Workshop</h5>
                                         <p class="salmon">Communication, Business Writing</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item connect communicate spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/silicon-alley-speed-networking-tickets-28290653105">
+                                <img alt="1" src="img/portfolio/speednetwork.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Silicon Alley Speed Networking</h5>
+                                        <p class="salmon">Networking, Communication</p>
                                     </div>
                                 </div>
                             </a>
@@ -305,7 +333,19 @@
                         </div>
                     </div>
 
-
+                    <div class="nf-item innovate tech spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/design-thinking-101-tickets-28486417642">
+                                <img alt="1" src="img/portfolio/uxdesign.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Design Thinking 101: Intro to UX</h5>
+                                        <p class="salmon">Innovation, Tech Skills</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
                     <div class="nf-item tech spacing all">
                         <div class="item-box">
@@ -377,20 +417,34 @@
                         </div>
                     </div>
 
-                    <div class="nf-item innovate tech spacing all">
+                    <div class="nf-item connect spacing all">
                         <div class="item-box">
-                            <a href="https://www.eventbrite.com/e/design-thinking-101-tickets-28486417642">
-                                <img alt="1" src="img/portfolio/uxdesign.png" class="item-container">
+                            <a href="https://www.eventbrite.com/e/pathway-to-the-professorship-tickets-28508947028">
+                                <img alt="1" src="img/portfolio/professorship.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Design Thinking 101: Intro to UX</h5>
-                                        <p class="salmon">Innovation, Tech Skills</p>
+                                        <h5 class="white">Pathway to Professorship</h5>
+                                        <p class="salmon">Career, Networking</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                     </div>
-
+ 
+                    <div class="nf-item tech spacing all">
+                        <div class="item-box">
+                            <a href="http://bit.ly/2dPbSFz">
+                                <img alt="1" src="img/portfolio/pythonopenlab.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Python Open Labs: Programming Made Easy</h5>
+                                        <p class="salmon">Tech Skills, Computer Science</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    
                     <div class="nf-item connect spacing all">
                         <div class="item-box">
                             <a href="https://www.eventbrite.com/e/graduate-engineers-connect-2016-registration-27726994186">
@@ -407,12 +461,12 @@
 
                     <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
+                            <a href="https://www.eventbrite.com/e/on-linkedin-tickets-28192988989">
+                                <img alt="1" src="img/portfolio/linkedinworkshop.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Ideation & Prototyping</h5>
-                                        <p class="salmon">Innovation, Tech Skills</p>
+                                        <h5 class="white">LinkedIn Workshop</h5>
+                                        <p class="salmon">Communication, Career</p>
                                     </div>
                                 </div>
                             </a>
@@ -435,11 +489,11 @@
 
                     <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
+                            <a href="https://www.eventbrite.com/e/matlab-machine-learning-tickets-28558222412">
+                                <img alt="1" src="img/portfolio/matlab.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Ideation & Prototyping</h5>
+                                        <h5 class="white">MATLAB: Machine Learning Workshop</h5>
                                         <p class="salmon">Innovation, Tech Skills</p>
                                     </div>
                                 </div>
@@ -474,14 +528,14 @@
                         </div>
                     </div>
 
-                    <div class="nf-item communicate spacing all">
+                    <div class="nf-item communicate lead spacing all">
                         <div class="item-box">
-                            <a href="cover_letter.html">
-                                <img alt="1" src="img/portfolio/cover_letter.png" class="item-container">
+                            <a href="https://www.eventbrite.com/e/conflict-resolution-tickets-28565731873">
+                                <img alt="1" src="img/portfolio/conflictresworkshop.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Cover Letter & Business Writing</h5>
-                                        <p class="salmon"> Communication, Business Writing</p>
+                                        <h5 class="white">Conflict Resolution Workshop</h5>
+                                        <p class="salmon"> Communication, Leadership</p>
                                     </div>
                                 </div>
                             </a>
