--- a/events.html
+++ b/events.html
@@ -224,12 +224,69 @@
 
                     <div class="nf-item communicate spacing all">
                         <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/nonverbal-group-presents-body-language-disected-tickets-28557376883">
+                                <img alt="1" src="img/portfolio/nonverbal.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Body Language Dissected</h5>
+                                        <p class="salmon">Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item communicate spacing all">
+                        <div class="item-box">
                             <a href="https://www.eventbrite.com/e/effective-communication-workshop-tickets-28563659675">
                                 <img alt="1" src="img/portfolio/effectivecomm.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Effective Communication Workshop</h5>
                                         <p class="salmon">Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item communicate lead spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/communication-leadership-tactics-to-take-your-career-to-new-heights-tickets-28819319360">
+                                <img alt="1" src="img/portfolio/commleadtacs.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Communication and Leadership Tactics</h5>
+                                        <p class="salmon">Communication, Leadership</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="nf-item communicate connect spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/acing-the-interview-tickets-28835717407">
+                                <img alt="1" src="img/portfolio/aceinterview.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Acing the Interview</h5>
+                                        <p class="salmon">Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item communicate innovate spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/making-things-people-want-lessons-from-10-years-in-startups-tickets-28187995052">
+                                <img alt="1" src="img/portfolio/peoplewant.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Making Things People Want</h5>
+                                        <p class="salmon">Communication, Innovation, Networking</p>
                                     </div>
                                 </div>
                             </a>
@@ -244,6 +301,20 @@
                                     <div class="item-caption">
                                         <h5 class="white">Resume Writing Workshop</h5>
                                         <p class="salmon">Communication, Business Writing</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item communicate tech spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/storytelling-for-the-design-process-tickets-28486744620">
+                                <img alt="1" src="img/portfolio/storytellingdesign.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Storytelling for Design Process</h5>
+                                        <p class="salmon">Communication, Design, Tech Skills</p>
                                     </div>
                                 </div>
                             </a>
@@ -431,14 +502,14 @@
                         </div>
                     </div>
  
-                    <div class="nf-item tech spacing all">
+                    <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="http://bit.ly/2dPbSFz">
-                                <img alt="1" src="img/portfolio/pythonopenlab.png" class="item-container">
+                            <a href="https://www.eventbrite.com/e/design-workshop-portfolio-management-tickets-28487066583">
+                                <img alt="1" src="img/portfolio/portfoliomgmt.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Python Open Labs: Programming Made Easy</h5>
-                                        <p class="salmon">Tech Skills, Computer Science</p>
+                                        <h5 class="white">Design Workshop: Portfolio Management</h5>
+                                        <p class="salmon">Tech Skills, Design, Innovation</p>
                                     </div>
                                 </div>
                             </a>
@@ -473,14 +544,14 @@
                         </div>
                     </div>
 
-                    <div class="nf-item innovate tech spacing all">
+                    <div class="nf-item communicate connect spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single8-vimeo.html">
-                                <img alt="1" src="img/portfolio/userstories.jpg" class="item-container">
+                            <a href="">
+                                <img alt="1" src="img/portfolio/publishseminar.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Understanding User Stories</h5>
-                                        <p class="salmon">Innovation, Tech Skills</p>
+                                        <h5 class="white">Seminar: Scientific Publishing</h5>
+                                        <p class="salmon">Publishing, Communication, Career</p>
                                     </div>
                                 </div>
                             </a>
@@ -626,14 +697,14 @@
                     </div>
                 </div>  
 
-                    <div class="nf-item innovate communicate spacing all">
+                    <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single4.html">
-                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
+                            <a href="https://www.eventbrite.com/e/prototyping-and-failures-tickets-28486908109">
+                                <img alt="1" src="img/portfolio/prototypingfailures.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Data Visualization</h5>
-                                        <p class="salmon">Innovation, Design, Communication</p>
+                                        <h5 class="white">Prototyping and Failures</h5>
+                                        <p class="salmon">Innovation, Design, Tech Skills</p>
                                     </div>
                                </div>
                            </a>
