--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item communicate lead all">
+                        <div class="nf-item innovate tech lead all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/effective-communication-workshop-tickets-28563659675" title="Effective Communication Workshop">
-                                    <img class="item-container" src="img/portfolio/effectivecomm.png" alt="7" />
+                                <a class="" href="https://www.eventbrite.com/e/storytelling-for-the-design-process-tickets-28486744620" title="Storytelling for the Design Process">
+                                    <img class="item-container" src="img/portfolio/storytellingdesign.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Effective Communication Workshop</h5>
-                                            <p class="white">In this session, participants will be introduced to and deepen their understanding of effective conversation. This class will inform through experiential practices, communication in being honest and direct in a way that builds relationship and maintains openness to diverse strategies for any given outcome, creating more innovative, collaborative results and give feedback that result in real change.</p>
+                                            <h5 class="lightblue">Storytelling for the Design Process</h5>
+                                            <p class="white">Anyone can make or build something, but what is the story behind the product? How did it come about? What are the stories of the users using the product? In this workshop, students will learn how storytelling and roleplaying helps define the user experience.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -338,14 +338,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item connect all">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/silicon-alley-speed-networking-tickets-28290653105" title="Silicon Alley Speed Networking">
-                                    <img class="item-container" src="img/portfolio/speednetwork.png" alt="6" />
+                                <a class="" href="https://www.eventbrite.com/e/nonverbal-group-presents-body-language-disected-tickets-28557376883" title="Body Language Dissected">
+                                    <img class="item-container" src="img/portfolio/nonverbal.png" alt="6" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Silicon Alley Speed Networking</h5>
-                                            <p class="white">Please join us for SEAS first inaugural Silicon Alley Speed Networking.</p>
+                                            <h5 class="lightblue">Nonverbal Group Presents: Body Language Dissected</h5>
+                                            <p class="white">Body Language Dissected is a workshop dedicated to developing the skill set of reading people. The class will teach you how to detect and use behavioral information to determine people’s true emotions, intentions and interests. You will learn a systematic approach for deducing behavior and will be spending a significant amount of time in practical application of the methods learned.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -355,12 +355,12 @@
 
                         <div class="nf-item tech innovate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/design-thinking-101-tickets-28486417642" title="Design Thinking 101">
-                                    <img class="item-container" src="img/portfolio/uxdesign.png" alt="2" />
+                                <a class="" href="https://www.eventbrite.com/e/prototyping-and-failures-tickets-28486908109" title="Prototyping & Failures">
+                                    <img class="item-container" src="img/portfolio/prototypingfailures.png" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Design Thinking 101: Intro to UX</h5>
-                                            <p class="white">What is design thinking? Why is it important? In this workshop, we will learn the role design thinking plays in organizations and in the process of building a product. Students will participate in hands on ideation and problem solving.</p>
+                                            <h5 class="lightblue">Prototyping and Failures</h5>
+                                            <p class="white">Most products go through rounds of iteration and user testing before it’s ready to launch. Designers/engineers may go into a project thinking that user’s will behave one way, but will be surprised by the outcomes when a user gets a hold of it. In this workshop, we will learn how to prioritize features, test them, fail quickly, learn, and build better products.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -368,14 +368,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item connect all">
+                        <div class="nf-item communicate lead all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/pathway-to-the-professorship-tickets-28508947028" title="Pathway to Professorship">
-                                    <img class="item-container" src="img/portfolio/professorship.png" alt="4" />
+                                <a class="" href="https://www.eventbrite.com/e/communication-leadership-tactics-to-take-your-career-to-new-heights-tickets-28819319360" title="Communication & Leadership Tactics">
+                                    <img class="item-container" src="img/portfolio/commleadtacs.png" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Pathway to Professorship</h5>
-                                            <p class="white">Dean Mary C. Boyce invites graduate SEAS students interested in pursuing careers in academia to participate in an inaugural seminar titled "Pathway to the Professorship".</p>
+                                            <h5 class="lightblue">Communication & Leadership Tactics to Take Your Career to New Heights</h5>
+                                            <p class="white">It’s not enough to just talk to people; you have to connect with them. In this workshop, Chuck Garcia will show you where you’re going wrong, and offer real, concrete, actionable advice on how to get it right. He is founder of Climb Leadership Consulting and is a Professor of Organizational Leadership at Mercy College in New York. </p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -385,12 +385,12 @@
 
                         <div class="nf-item connect communicate all">
                             <div class="item-box">
-                              <a class="" href="https://www.eventbrite.com/e/on-linkedin-tickets-28192988989" title="LinkedIn Workshop">
-                                    <img class="item-container" src="img/portfolio/linkedinworkshop.png" alt="5" />
+                              <a class="" href="https://www.eventbrite.com/e/acing-the-interview-tickets-28835717407" title="Acing the Interview">
+                                    <img class="item-container" src="img/portfolio/aceinterview.png" alt="5" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">LinkedIn Workshop</h5>
-                                            <p class="white">This workshop will help you develop an effective LinkedIn profile and learn strategies for making useful connections.</p>
+                                            <h5 class="lightblue">Acing the Interview</h5>
+                                            <p class="white">At the end of this workshop, participants will be able to: 1. Describe the recommended steps to prepare for an interview; 2. Articulate their personal brand statement; 3. Tailor a key project/achievement to an interviewer; 4. Leverage Common Interview Questions Handout to prepare for interviews.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -428,14 +428,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate lead all">
+                        <div class="nf-item innovate tech all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/sexual-harassment-when-professional-development-is-compromised-registration-27679836135" title="Sexual Harrassment: When Professional Development is Compromised">
-                                    <img class="item-container" src="img/portfolio/sexualharrassment.png" alt="8" />
+                                <a class="" href="https://www.eventbrite.com/e/design-workshop-portfolio-management-tickets-28487066583" title="Design Workshop: Portfolio Management">
+                                    <img class="item-container" src="img/portfolio/portfoliomgmt.png" alt="8" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Sexual Harassment: When Professional Development Is Compromised</h5>
-                                            <p class="white">When sexual harassment is occurring in an environment where a lot of time is spent, the ability to have growth and experience well-being can become limited. This session will encourage participants to think critically about sexual harassment and possible ways to respond to sexual harassment.</p>
+                                            <h5 class="lightblue">Design Workshop: Portfolio Management</h5>
+                                            <p class="white">Portfolios are your ticket into the tech world. We will go through the benefits of having one. No matter what field you work in, you need to be able to tell your story. What are some of the important questions to ask potential employers and questions you could expect. What’s the difference between a pet trick and a well thought out project? How to prepare when you meet other members of the team beyond engineering.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
