--- a/events.html
+++ b/events.html
@@ -250,7 +250,20 @@
                         </div>
                     </div>
 
-                    <div class="nf-item communicate lead spacing all">
+                    <div class="nf-item communicate connect spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/professional-development-workshop-leveraging-social-media-and-linked-in-tickets-29034968372">
+                                <img alt="1" src="img/portfolio/profdevworkshop.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Professional Development Workshop: Leveragin Social Media and LinkedIn</h5>
+                                        <p class="salmon">Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                                        <div class="nf-item communicate lead spacing all">
                         <div class="item-box">
                             <a href="https://www.eventbrite.com/e/communication-leadership-tactics-to-take-your-career-to-new-heights-tickets-28819319360">
                                 <img alt="1" src="img/portfolio/commleadtacs.png" class="item-container">
@@ -264,8 +277,7 @@
                         </div>
                     </div>
 
-
-                    <div class="nf-item communicate connect spacing all">
+                    <div class="nf-item communicate innovate tech spacing all">
                         <div class="item-box">
                             <a href="https://www.eventbrite.com/e/acing-the-interview-tickets-28835717407">
                                 <img alt="1" src="img/portfolio/aceinterview.png" class="item-container">
@@ -287,6 +299,20 @@
                                     <div class="item-caption">
                                         <h5 class="white">Making Things People Want</h5>
                                         <p class="salmon">Communication, Innovation, Networking</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                   <div class="nf-item communicate spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/cover-letter-business-writing-tickets-29088037102">
+                                <img alt="1" src="img/portfolio/coverletterbusiness.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Cover Letter and Business Writing</h5>
+                                        <p class="salmon">Career, Business Writing</p>
                                     </div>
                                 </div>
                             </a>
