--- a/contact.html
+++ b/contact.html
@@ -247,7 +247,7 @@
                     <div class="col-md-3 col-sm-6 mb-30">
                         <div class="team-item">
                             <div class="team-item-img">
-                                <img src="img/team/female_silhouette.jpg" alt="" />
+                                <img src="img/team/raina.jpg" alt="" />
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>​Raina M. Ranaghan</h5>
