--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item innovate tech lead all">
+                        <div class="nf-item communicate innovate tech all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/storytelling-for-the-design-process-tickets-28486744620" title="Storytelling for the Design Process">
-                                    <img class="item-container" src="img/portfolio/storytellingdesign.png" alt="7" />
+                                <a class="" href="https://www.eventbrite.com/e/making-things-people-want-lessons-from-10-years-in-startups-tickets-28187995052" title="Making Things People Want">
+                                    <img class="item-container" src="img/portfolio/peoplewant.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Storytelling for the Design Process</h5>
-                                            <p class="white">Anyone can make or build something, but what is the story behind the product? How did it come about? What are the stories of the users using the product? In this workshop, students will learn how storytelling and roleplaying helps define the user experience.</p>
+                                            <h5 class="lightblue">Making Things People Want</h5>
+                                            <p class="white">Through the lens of 10 years of successes and failures, we’ll cover the fundamental concepts that every entrepreneur, engineer, and product manager need to apply in order to be successful. Topics will range from hard skills like achieving product / market fit; validating hypotheses through Minimum Viable Products; and diagnosing user behavior through user research and data analysis; to soft skills like engineering leadership and effective stakeholder communication.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -398,6 +398,21 @@
                             </div>
                         </div>
 
+                        <div class="nf-item communicate connect all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/professional-development-workshop-leveraging-social-media-and-linked-in-tickets-29034968372" title="Professional Development Workshop">
+                                    <img class="item-container" src="img/portfolio/profdevworkshop.png" alt="7" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">Professional Development Workshop: Leveraging Social Media and LinkedIn</h5>
+                                            <p class="white">This workshop will help you develop an effective LinkedIn profile and learn strategies for making useful connections.</p>
+                                            <p class="salmon">Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
                         <div class="nf-item tech innovate all">
                             <div class="item-box">
                                 <a class="" href="https://www.eventbrite.com/e/matlab-machine-learning-tickets-28558222412" title="MATLAB: Machine Learning Workshop">
@@ -421,6 +436,21 @@
                                         <div class="item-caption">
                                             <h5 class="lightblue">Conflict Resolution Workshop</h5>
                                             <p class="white">Learn principles of constructive conflict resolution and gain skills for achieving “win-win” agreements and for managing challenging situations.</p>
+                                            <p class="salmon">Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item communicate all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/cover-letter-business-writing-tickets-29088037102" title="Cover Letter & Business Writing">
+                                    <img class="item-container" src="img/portfolio/coverletterbusiness.png" alt="7" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">Cover Letter and Business Writing</h5>
+                                            <p class="white">This workshop is intended to help graduate engineering students draft cover letters for internships and full-time employment applications. It will also cover email etiquette in a professional setting.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
