--- a/contact.html
+++ b/contact.html
@@ -359,7 +359,7 @@
                             </div>
                         </div>
                     </div>
-                          <div class="col-md-3 col-sm-6 mb-30">
+                        <div class="col-md-3 col-sm-6 mb-30">
                         <div class="team-item">
                             <div class="team-item-img">
                                 <img src="img/team/tiffany.jpg" alt="" />
@@ -378,10 +378,17 @@
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
                                     -->
+                                    </div>
+                                </div>
+                            </div>
                             <div class="team-item-info">
                                 <h5>Tiffany Alexander</h5>
                                 <p class="">MSIE & MSOR, Career Placement Officer</p>
-                                <br />
+                                
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- End Team Box -->
                 </div>
             </div>
